demo-etl | ReadME enhancements